app/static/style.css
/* ====================
 CSS VARIABLES
======================= */
:root {
    --black: #131313;
    --white: #FFFFFF;
    --bg-light: #EBF6F2;
    --bg-navbar: #DEDBFE;
    --bg-dark: #167973;
    --bg-activity-display: hsla(245, 100%, 95%, 0.9);
    --bg-completed: hsla(160, 36%, 88%, 1);
    --bg-notcompleted: hsla(246, 91%, 65%, 0.21);
    --completed-color: hsla(176, 69%, 28%, 1);
    --notcompleted-color: hsla(246, 54%, 53%, 1);
    --content-bg-light: #D7ECE5;
    --attendance-bg:#FBE6CC;
    --link-color: #6354F7;
    --link-hover-color: #872CA7;
    --highlight-color: #6354F7;
    --btn-bright: #FE6146;
    --btn-bright-hover: #C84832;
    --btn-activity-display: hsla(246, 91%, 65%, 1);
    --btn-activity-display-hover: hsla(246, 91%, 55%, 1);
    --btn-bg-color-light: #C7C4E3;
    --btn-edit: hsla(33, 85%, 89%, 1);
    --btn-details: hsla(220, 78%, 89%, 1);
    --btn-delete: hsla(3, 56%, 49%, 0.3);
    --btn-edit-hover: hsla(33, 85%, 79%, 1);
    --btn-details-hover: hsla(220, 78%, 79%, 1);
    --btn-delete-hover: hsla(3, 66%, 42%, 0.4);
    --alert-color: rgba(196, 61, 55, 0.3);
    --header-icon-hover-color: #872CA7;
    --border-light: #D7DADD;
}

*, *:before, *:after {
    box-sizing: border-box;
}

p {
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    padding: 0;
    background-color: var(--white);
    color: #131313;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

/* ====================
 TYPOGRAPHY
======================= */
a {
    text-decoration:none;
    color: var(--link-color);
    cursor: pointer;
}

a:hover, a:focus {
    color: var(--link-hover-color);
    text-decoration: none;
}


h1, h2, h3, h4 {
    font-family: "Lexend Deca", serif;
}

.heading {
    font-size: 3.3rem;
}

.heading-sans-serif {
    font-family: 'Lexend Deca', sans-serif;
}

.subheading {
    font-family: 'Lexend Deca', sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
}

/* ====================
 GENERAL LAYOUT
======================= */
.container {
    width: 100%;  
    max-width: 1000px;
    margin: 0 auto;
    padding: 2em 1.5em;
    /* border: 1px solid red; */
}

.container-form {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header-form {
    display: none;
}

.subheading {
    margin-bottom: 2.5em;
}



.form {
    max-width: 600px;
}

.form-field {
    margin-bottom: 1.2em;
}

.input-field:last-child {
    margin-bottom: 0;
}

.form-select--light {
    display: block;
    border: unset;
    padding: 0.8em 1.2em;
    border: 1px solid var(--border-light);
    border-radius: 0.5em;   
}


@media screen and (min-width: 968px) {
    
    .wrapper-form {
        background: var(--bg-light);
        display: flex;
        justify-content: center;
        height: 100vh;
        align-items: center;
    }
    
    .container-form {
        height: unset;
        align-items: stretch;
        padding: 0;
        box-shadow: 0 3px 20px rgba(0,0,0,0.2);
        border-radius: 25px;
        max-width: 1000px;
        margin: 3em 2.5em;
        /* border: 1px solid red; */
    }

    .header-form {
        display: block;
        background: var(--bg-dark);
        border-radius: 25px 0 0 25px;
        /* border: 1px solid blue; */
        padding: 0 3.5em;
        display: flex;
        flex-direction: column;
        justify-content: center;
        color: var(--off-white);
        flex-grow: 1;
    }

    .content-form {
        background: var(--off-white);
        border-radius: 0 25px 25px 0;
        display: flex;
        flex-direction: column;
        padding: 2em 3.8em;
        flex-shrink: 0;
    }

    .form {
        max-width: 350px;
        margin-top: 1.2em;
    }

    .form-footer {
        margin-top: 0.5em;
    }
}




/* ====================
 FLASH MESSAGE STYLES
======================= */

.info {
    color: #155724;
    background-color: #d4edda;
    border-color: #c3e6cb;
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
    border: 1px solid transparent;
    border-radius: .25rem;
}

.error {
    color: #721c24;
    background-color: #f8d7da;
    border-color: #f5c6cb;
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
    border: 1px solid transparent;
    border-radius: .25rem;
}

/* ====================
 BUTTON STYLES
======================= */
.btn {
    border: unset;
    cursor: pointer;
}

.btn-form {
    border: none;
    width: 100%;
    background: var(--black);
}

.btn-form:hover, .btn-form:focus {
    background: var(--bg-dark);
    color: #FFF;
}

.btn-edit {
    background-color: var(--btn-edit);
    color: var(--black);
}

.btn-edit:hover, .btn-edit:focus {
    background-color: var(--btn-edit-hover);
}

.btn-details {
    background-color: var(--btn-details);
    color: var(--black); 
}

.btn-details:hover, .btn-details:focus {
    background-color: var(--btn-details-hover);
}

.btn-delete {
    background-color: var(--btn-delete);
    color: var(--black);
}

.btn-delete:hover, .btn-delete:focus {
    background-color: var(--btn-delete-hover);
}

/* ====================
 HEADER & NAV 
======================= */
/* temporarily hide bootstrap navbar */
.header-main {
    /* border: 1px solid green; */
    position: relative;
}

/* custom navbar styles */
.navbar-custom {
    padding: 2.7em 1.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar-logo {
    text-align: center;
    line-height: 0.8em;
}

.navbar-logo-text {
    font-family: 'Zilla Slab', serif;
    font-size: 2.2rem;
    color: #131313;
}

.navbar-logo-text:hover, .navbar-logo:focus {
    color: #167973;
}

.navbar-icon {
    background: #131313;
    color: #131313;
    border: unset;
    background: unset;
    font-size: 2.3rem;
    /* border: 1px solid pink; */
}

.navbar-icon:hover, .navbar-icon:focus {
    color: var(--header-icon-hover-color);
}
/* ... */

